--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "free-k3r1nzz",
+  "engines": {
+    "node": "20.12.1"
+  },
   "version": "0.0.0",
   "private": true,
   "type": "module",
